# StudyOS-Agent-Gateway

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.agent  LICENSE  README.md  docker-compose.agent.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: task-6-report.md
codex/: config.toml
codex/memories/: studyos-course.md
docs/: agent-runtime.md  gateway-research.md  security.md  setup.md  studyos-collaboration-workflow.md
scripts/: deploy_jetson.sh  seed_jetson_gh_profile.sh  seed_jetson_public_gh.sh  seed_jetson_studyos_org_gh.sh
src/study_discord_agent/: __init__.py  agent.py  agent_errors.py  agent_execution_policy.py  agent_progress.py  agent_webhook.py  artifacts.py  codex_app_server.py  codex_app_server_command.py  codex_app_server_connection.py  codex_app_server_events.py  codex_app_server_protocol.py  codex_app_server_runtime.py  codex_app_server_runtime_failures.py  codex_app_server_thread_loader.py  codex_app_server_timeout.py  codex_app_server_transport.py  codex_app_server_turn.py  codex_app_server_turn_updates.py  codex_command.py  command_runner.py  config.py  discord_attachment_downloads.py  discord_bot.py  discord_context_tool.py  discord_delivery_cache.py  (+82 more)
tests/: discord_task_command_fakes.py  discord_task_input_fakes.py  discord_task_service_fakes.py  test_agent.py  test_agent_execution_policy.py  test_agent_progress.py  test_agent_sessions.py  test_artifacts.py  test_automation_seed_files.py  test_codex_app_server.py  test_codex_app_server_command.py  test_codex_app_server_runtime.py  test_codex_app_server_thread_loader.py  test_discord_attachment_downloads.py  test_discord_bot.py  test_discord_bot_messages.py  test_discord_bot_wiring.py  test_discord_context_tool.py  test_discord_delivery_cache.py  test_discord_delivery_cache_close.py  test_discord_delivery_cache_restore.py  test_discord_delivery_cache_security.py  test_discord_delivery_resources.py  test_discord_mentions.py  test_discord_progress.py  test_discord_reply_content.py  test_discord_staging_cleanup.py  test_discord_task_access.py  test_discord_task_application.py  test_discord_task_auth.py  test_discord_task_cards.py  test_discord_task_close_races.py  test_discord_task_commands.py  test_discord_task_component_controller.py  test_discord_task_components.py  test_discord_task_delivery_regressions.py  test_discord_task_failures.py  test_discord_task_inputs.py  test_discord_task_inputs_security.py  test_discord_task_messenger.py  (+34 more)
(+23 files in other folders)
