[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "studyos-agent-gateway"
version = "0.1.0"
description = "Discord and GitHub gateway for shared StudyOS coding agents"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Sebastian Boehler" }]
dependencies = [
  "discord.py>=2.5,<3",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pyright>=1.1,<2",
  "ruff>=0.9,<1",
]

[project.scripts]
studyos-agent-gateway = "study_discord_agent.main:main"
studyos-discord-agent = "study_discord_agent.main:main"
study-discord-agent = "study_discord_agent.main:main"
studyos-discord-context = "study_discord_agent.discord_context_tool:main"
studyos-render-diagram = "study_discord_agent.diagram_tool:main"
studyos-usage-report = "study_discord_agent.usage_report:main"
studyos-usage-plot = "study_discord_agent.usage_plot:main"

[tool.hatch.build.targets.wheel]
packages = ["src/study_discord_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
